tmp-manifest/test.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: ui
  labels:
    app: test-service
spec:
  selector:
    app: testdeploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
